# CMIP7-CVs

./: .copier-answers.yml  .gitignore  @context  CMIP7-CVs_activity.json  CMIP7-CVs_drs.json  CMIP7-CVs_experiment.json  CMIP7-CVs_experiment_list.csv  CMIP7-CVs_experiment_simplified.json  CMIP7-CVs_frequency.json  CMIP7-CVs_frequency_list.csv  CMIP7-CVs_index.json  NOTICE  README.md  activity  activity.json  archive_id.json  attr_specs.yaml  auto-setup.py  catalog_specs.yaml  cmip7-stac.json  cmor-cvs.json  create-cmor-cvs-table-export-environment.sh  demo.ipynb  drs.json  drs_specs.yaml  esgvoc_manifest.yaml  frequency.json  graph.jsonld  grid_label.json  index.json  issues.json  iterative.ipynb  license  license.json  main.py  mip-era.json  mip_era.json  native-nominal-resolution.json  native_nominal_resolution.json  nohup.out  (+19 more)
.github/: CONTRIBUTING.md  README  README.md  _README.md  issues.md  modifications.md  reflog.txt
.github/form-processor/: .copier-answers.yml  Makefile  README.md  pyproject.toml
.github/form-processor/src/github_form_processor/: __init__.py  __main__.py  cli.py  cv.py  format.py  github_api.py  issue_body.py  models.py  processor.py  render.py
.github/form-processor/tests/: test_cli.py  test_issue_body.py  test_models.py  test_processor.py
.src/: CI.ipynb  Pending.ipynb  check.ipynb  dr_experiments.csv  pending-experiments.xlsx  prefill.ipynb  summay.ipynb  test.ipynb
.summaries/: CMIP7-CVs_activity_id.json  CMIP7-CVs_area_label.json  CMIP7-CVs_experiment_id.json  CMIP7-CVs_frequency.json  CMIP7-CVs_grid_label.json  CMIP7-CVs_horizontal_label.json  CMIP7-CVs_license.json  CMIP7-CVs_mip_era.json  (+33 more)
(+6638 files in other folders)
