[project]
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-resource.con"},
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
]
name = "github-form-processor"
version = "0.1.0"
description = "Process GitHub issue forms into registration pull requests"
readme = "README.md"

[dependency-groups]
dev = [
    "pre-commit>=3.3.1",
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "src/github_form_processor"
]

[tool.uv]
package = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [ ]
ignore = [
    "D200",
    "D400",
    "UP007",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR0911",
    "PLR2004",
    "S310",
    "TRY003",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",
    "S101",
]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
]
